# Pygame-Manager

./: .gitignore  README.md  __init__.py  _sync_version.py  pyproject.toml
audio/: __init__.py  _audio_manager.py
data/: __init__.py  _data_manager.py
languages/: _languages_manager.py
managers/audio/: _audio_manager.py
managers/data/: _data_manager.py
managers/languages/: _languages_manager.py
managers/screen/: _screen_manager.py
pygame_manager/: __init__.py  __init__.pyi  _version.py  api.py  api.pyi  context.py  types.py
pygame_manager/core/: __init__.py  engine.py
pygame_manager/data/: __init__.py  data.py
pygame_manager/inputs/: __init__.py  inputs.py
pygame_manager/languages/: languages.py
pygame_manager/managers/: __init__.py
pygame_manager/managers/audio/: __init__.py  audio.py
pygame_manager/managers/data/: __init__.py  _io.py  _sql.py  data.py
pygame_manager/managers/entities/: __init__.py  _circle_entity.py  _entity.py  _line_entity.py  _polygon_entity.py  _rect_entity.py  _segment_entity.py  (+2 more)
pygame_manager/screen/: _loading.py  screen.py
pygame_manager/settings/: __init__.py
pygame_manager/states/: __init__.py  states.py
pygame_manager/time/: __init__.py  time.py
pygame_managers/: __init__.py
pygame_managers/audio/: __init__.py
pygame_managers/data/: __init__.py  _data_manager.py  data.py
pygame_managers/inputs/: inputs.py
pygame_managers/languages/: __init__.py
pygame_managers/screen/: __init__.py
pygame_managers/time/: __init__.py  _time_manager.py
screen/: _screen_manager.py
time/: _time_manager.py
(+72 files in other folders)
