[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame_manager"
version = "0.50.3"
description = "Collection de managers pour Pygame"
authors = [{ name = "WhiteWolf45380" }]
dependencies = ["pygame", "easygui"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygame_manager*"]

[tool.setuptools.package-data]
"pygame_manager.managers.loading" = ["_loading_frames/*.png"]