[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame_manager"
version = "0.9.21"
description = "Collection de managers pour Pygame"
authors = [{ name = "WhiteWolf45380" }]
dependencies = ["pygame", "easygui", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygame_manager*"]

[tool.setuptools.package-data]
"pygame_manager.managers.loading" = ["_loading_frames/*.png"]